--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             
                             <li class="nav__item">
                                 <a href="#PUBLICATION" class="nav__link">
-                                    <i class="bx bx-briefcase-alt nav__icon"></i>چاپها
+                                    <i class="bx bx-briefcase-alt nav__icon"></i>فعالیت‌های اجتماعی
                                 </a>
                             </li>
 
@@ -65,11 +65,6 @@
                                 </a>
                             </li>
                             
-                            <li class="nav__item">
-                                <a href="#references" class="nav__link">
-                                    <i class="bx bx-link-external nav__icon"></i>مراجع
-                                </a>
-                            </li>
                         </ul>
                     </div>
 
@@ -486,6 +481,7 @@ The kurdish Dictionary(Yaprax) and GNU/Linux online magazine(Co-Founder), The ku
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
