--- a/index.html
+++ b/index.html
@@ -159,6 +159,19 @@
                       <section class="education section" id="education">
                         <h2 class="section-title">تحصیلات</h2>
                         <div class="education__container bd-grid">
+                             <div class="education__content">
+                                <div class="education__time">
+                                  <span class="education__rounder"></span> 
+                                  <span class="education__line"></span> 
+                                </div>
+
+                                <div class="education__data bd-grid">
+                                    <h3 class="education__title">کاردانی کامپیوتر</h3>
+                                    <span class="education__studies">دانشگاه آزاد قروه</span>
+                                    <span class="education__year">١٣89 - 1391</span>
+
+                                </div>
+                            </div>
                             <div class="education__content">
                                 <div class="education__time">
                                   <span class="education__rounder"></span> 
@@ -166,9 +179,9 @@
                                 </div>
 
                                 <div class="education__data bd-grid">
-                                    <h3 class="education__title">لیسانس علوم کامپیوتر</h3>
+                                    <h3 class="education__title">کارشناسی مدیریت صنعتی</h3>
                                     <span class="education__studies">دانشگاه کردستان</span>
-                                    <span class="education__year">١٣٩٥-١٣٩٥</span>
+                                    <span class="education__year">1392-1394</span>
 
                                 </div>
                             </div>
@@ -182,7 +195,7 @@
                                 <div class="education__data bd-grid">
                                     <h3 class="education__title"> کارشناسی ارشد مدیریت استراتژیک</h3>
                                     <span class="education__studies">دانشگاه پیام‌نور دماوند</span>
-                                    <span class="education__year">١٣٩٦-١٣٩٨</span>
+                                    <span class="education__year">1396-1399</span>
                                     
                                 </div>
                             </div>
@@ -342,6 +355,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
