--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                                 <div class="education__data bd-grid">
                                     <h3 class="education__title">کاردانی کامپیوتر</h3>
                                     <span class="education__studies">دانشگاه آزاد قروه</span>
-                                    <span class="education__year">١٣89 - 1391</span>
+                                    <span class="education__year">۱۳۹۱- ۱۳۸۹</span>
 
                                 </div>
                             </div>
@@ -181,7 +181,7 @@
                                 <div class="education__data bd-grid">
                                     <h3 class="education__title">کارشناسی مدیریت صنعتی</h3>
                                     <span class="education__studies">دانشگاه کردستان</span>
-                                    <span class="education__year">1392-1394</span>
+                                    <span class="education__year">۱۳۹۲-۱۳۹۴</span>
 
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                 <div class="education__data bd-grid">
                                     <h3 class="education__title"> کارشناسی ارشد مدیریت استراتژیک</h3>
                                     <span class="education__studies">دانشگاه پیام‌نور دماوند</span>
-                                    <span class="education__year">1396-1399</span>
+                                    <span class="education__year">۱۳۹۶-۱۳۹۹ | آسیب شناسی مدیریت گردشگری در استان کردستان با رویکرد استراتژیک </span>
                                     
                                 </div>
                             </div>
@@ -355,6 +355,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
