--- a/index.html
+++ b/index.html
@@ -195,7 +195,8 @@
                                 <div class="education__data bd-grid">
                                     <h3 class="education__title"> کارشناسی ارشد مدیریت استراتژیک</h3>
                                     <span class="education__studies">دانشگاه پیام‌نور دماوند</span>
-                                    <span class="education__year">۱۳۹۶-۱۳۹۹ | آسیب شناسی مدیریت گردشگری در استان کردستان با رویکرد استراتژیک </span>
+                                    <span class="education__year">۱۳۹۶-۱۳۹۹</span>
+                                    <span class="education__year">موضوع پایاننامه: آسیب شناسی مدیریت گردشگری در استان کردستان با رویکرد استراتژیک </span>
                                     
                                 </div>
                             </div>
@@ -355,6 +356,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
