--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     <i class="bx bx-envelope home__icon"></i>zhilamoradi2@gmail.com
                                 </span>
                                 <span class="home__information">
-                                    <i class="bx bx-phone home__icon"></i>918-530-8277 (+98)
+                                    <i class="bx bx-phone home__icon"></i>۹۱۸-۵۳۰-۸۲۷۷ (۹۸+)
                                 </span>
                                 
                                
@@ -356,6 +356,7 @@
         <script src="assets/js/main.js"></script>
     </body>
 </html>
+
 
 
 
